# modul_6

./: pyproject.toml  server.py
templates/: catalog.html  category.html  contacts.html  home.html  index.html
